--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background-color: #0d0c1b;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +39,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.dolus-heading {
+  color: white;
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;;
+  font-size: 4em;
+
 }
